@@ -123,6 +123,11 @@ What's New in Stackless 3.2.5?
   Bug fix: invoking tasklet.run() on a tasklet from a already
   terminated thread no longer crashes the interpreter.
 
+- https://bitbucket.org/stackless-dev/stackless/issue/52
+  Use distinct product codes for the Stackless MSI installer.
+  Increment the value of the product code of the regular CPython release
+  by 8 if it is Stackless.
+
 
 - Fix unlinking of tasks in kill_tasks_with_stacks. The earlier code
   was a bit weird and would cause miscompilation on X64.
